files/kubernetes/manifests/applications/stashpad/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stashpad-staging
  labels:
    app.kubernetes.io/name: stashpad
    app.kubernetes.io/environment: staging
