files/kubernetes/manifests/applications/stashpad/overlays/staging/patch-disable-scan-on-start.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stashpad
spec:
  template:
    spec:
      containers:
        - name: stashpad
