files/kubernetes/manifests/applications/stashpad/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stashpad
  namespace: stashpad-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - staging.stashpad.kojigenba-srv.com
      secretName: stashpad-staging-tls
  rules:
    - host: staging.stashpad.kojigenba-srv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stashpad
                port:
                  number: 8080
